--- a/EasyLearn/UI/AppWindow.xaml
+++ b/EasyLearn/UI/AppWindow.xaml
@@ -40,7 +40,7 @@
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="Click">
                                 <i:InvokeCommandAction Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"/>
-                                <i:InvokeCommandAction Command="{Binding OpenListsPage}"/>
+                                <i:InvokeCommandAction Command="{Binding OpenDictionariesPageCommand}"/>
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
 
