--- a/EasyLearn/UI/AppWindow.xaml
+++ b/EasyLearn/UI/AppWindow.xaml
@@ -9,6 +9,7 @@
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
+        KeyDown="OnWindowKeyDown"
         Title="EasyLearn" Height="600" Width="950"
         WindowState="Maximized">
     <Grid>
