--- a/EasyLearn/UI/Pages/DictationPage.xaml
+++ b/EasyLearn/UI/Pages/DictationPage.xaml
@@ -8,90 +8,140 @@
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="1100"
       Title="DictationPage">
 
     <materialDesign:DialogHost>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="0.6*"/>
-                <RowDefinition Height="0.4*"/>
+                <RowDefinition Height="0.65*"/>
+                <RowDefinition Height="0.35*"/>
             </Grid.RowDefinitions>
 
             <!--Система отображения для обычного диктанта-->
-            <StackPanel Visibility="{Binding IsCommonDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 40 0 0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock
-                       FontSize="90"
-                       Text="{Binding MainCommonDictationDisplayValue}"
-                       Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Margin="0 0 0 10"/>
-                    <materialDesign:Chip Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Icon="T" Content="{Binding UnitTypeCommonDictationDisplayValue}"/>
-                </Grid>
+            <Grid Visibility="{Binding IsCommonDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}" 
+                  VerticalAlignment="Stretch" 
+                  HorizontalAlignment="Center"
+                  d:Visibility="Collapsed">
 
-                <TextBlock
-                       FontSize="50"
-                       Text="{Binding CommentCommonDictationDisplayValue}"
-                       Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                    Foreground="Gray"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1.7*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="0.5*"/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="1">
+                    <Grid>
+                        <TextBlock FontSize="100"
+                               Text="{Binding MainCommonDictationDisplayValue}"
+                               Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               d:Text="EasyLearn"/>
+                        <materialDesign:Chip Grid.Column="1" 
+                                             HorizontalAlignment="Right" 
+                                             VerticalAlignment="Top" 
+                                             Foreground="{Binding CommonDictationUnitTypeForegraundColor}"
+                                             Height="35"
+                                             FontSize="20"
+                                             Margin="0 -10 -65 0"
+                                             d:Content="Глагол"
+                                             Visibility="{Binding CommonDictationTypeChipIsVisible, Converter={converters:ReverseCollapseConverter}}" 
+                                             Content="{Binding UnitTypeCommonDictationDisplayValue}"/>
+                    </Grid>
+                    <TextBlock FontSize="50"
+                               Text="{Binding CommentCommonDictationDisplayValue}"
+                               Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Grid.Row="1"
+                               d:Text="Comment"
+                               Foreground="Gray"/>
+                </StackPanel>
+
+
 
                 <!--Иконка правильного простого диктанта-->
                 <materialDesign:PackIcon Kind="Check" 
-                                     Height="60" 
-                                     Width="60" 
-                                     Foreground="Green"
-                                     HorizontalAlignment="Center"
-                                     Visibility="{Binding CommonDictationCorrectAnswerIconIsVisible, Converter={converters:ForwardVisibilityConverter}}"/>
+                                         Height="60" 
+                                         Width="60" 
+                                         Grid.Row="2"
+                                         Foreground="ForestGreen"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Bottom"
+                                         Visibility="{Binding CommonDictationCorrectAnswerIconIsVisible, Converter={converters:ForwardVisibilityConverter}}"/>
 
                 <!--Иконка неправильного ответа сложного диктанта-->
                 <materialDesign:PackIcon Kind="Close" 
-                                     Height="60" 
-                                     Width="60" 
-                                     Foreground="Red"
-                                     HorizontalAlignment="Center"
-                                     Visibility="{Binding CommonDictationWrongAnswerIconIsVisible, Converter={converters:ForwardVisibilityConverter}}"/>
+                                         Height="60" 
+                                         Width="60" 
+                                         Grid.Row="2"
+                                         Foreground="Red"
+                                         HorizontalAlignment="Center"
+                                         VerticalAlignment="Bottom"
+                                         Visibility="{Binding CommonDictationWrongAnswerIconIsVisible, Converter={converters:ForwardVisibilityConverter}}"/>
 
-            </StackPanel>
+            </Grid>
 
 
 
             <!--Система отображения для дикнтанта предлогов-->
-            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 40 0 0" Visibility="{Binding IsVerbPrepositionDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock
-                       FontSize="90"
-                       Text="{Binding MainVerbPrepositionDictationDisplayValue}"
-                       Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       Margin="0 0 0 10"/>
-                    <materialDesign:Chip Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Icon="T" Content="{Binding UnitTypeVerbPrepositionDictationDisplayValue}"/>
-                </Grid>
+            <Grid d:Visibility="Visible" 
+                  VerticalAlignment="Stretch" 
+                  HorizontalAlignment="Center"
+                  Visibility="{Binding IsVerbPrepositionDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}">
 
-                <TextBlock
-                       FontSize="50"
-                       Text="{Binding CommentVerbPrepositionDictationDisplayValue}"
-                       Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                    Foreground="Gray"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1.7*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="0.5*"/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="1">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontSize="100"
+                                   Text="{Binding MainVerbPrepositionDictationDisplayValue}"
+                                   Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   d:Text="Depends"/>
+                        <TextBlock FontSize="100"
+                                   Grid.Column="1"
+                                   Text="..."
+                                   Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   Margin="30 0 0 0"
+                                   d:Text="..."/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontSize="50"
+                                   Text="{Binding TranslationVerbPrepositionDictationDisplayValue}"
+                                   Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   d:Text="Зависеть от"
+                                   FontStyle="Italic"
+                                   Foreground="Black"/>
+                        <TextBlock FontSize="50"
+                                   Margin="20 0 0 0"
+                                   Text="{Binding CommentVerbPrepositionDictationDisplayValue}"
+                                   Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   FontStyle="Italic"
+                                   d:Text="кого-то"
+                                   Foreground="Gray"/>
+                    </StackPanel>
+                </StackPanel>
+
+                
 
                 <!--Иконка правильного простого диктанта-->
                 <materialDesign:PackIcon Kind="Check" 
                                      Height="60" 
                                      Width="60" 
+                                         Grid.Row="2"
                                      Foreground="Green"
                                      HorizontalAlignment="Center"
                                      Visibility="{Binding VerbPrepositionDictationCorrectAnswerIconIsVisible, Converter={converters:ForwardVisibilityConverter}}"/>
@@ -100,13 +150,14 @@
                 <materialDesign:PackIcon Kind="Close" 
                                      Height="60" 
                                      Width="60" 
+                                         Grid.Row="2"
                                      Foreground="Red"
                                      HorizontalAlignment="Center"
                                      Visibility="{Binding VerbPrepositionDictationWrongAnswerIconIsVisible, Converter={converters:ForwardVisibilityConverter}}"/>
-            </StackPanel>
+            </Grid>
 
             <!--Система отображения для диктанта неправильных глаголов-->
-            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 40 0 0" Visibility="{Binding IsIrregularVerbDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}">
+            <StackPanel d:Visibility="Collapsed" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 40 0 0" Visibility="{Binding IsIrregularVerbDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}">
                 <TextBlock
                        FontSize="90"
                        Text="{Binding MainIrregularVerbDictationDisplayValue}"
