--- a/EasyLearn/UI/Pages/DictationPage.xaml
+++ b/EasyLearn/UI/Pages/DictationPage.xaml
@@ -22,13 +22,23 @@
             <Grid Visibility="{Binding IsCommonDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}" 
                   VerticalAlignment="Stretch" 
                   HorizontalAlignment="Center"
-                  d:Visibility="Collapsed">
+                  d:Visibility="Visible">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1.7*"/>
                     <RowDefinition Height="2*"/>
                     <RowDefinition Height="0.5*"/>
                 </Grid.RowDefinitions>
+
+                <ItemsControl ItemsSource="{Binding AvailableRelationViews}" 
+                              VerticalContentAlignment="Top"
+                              HorizontalContentAlignment="Left">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
 
                 <StackPanel Grid.Row="1">
                     <Grid>
@@ -86,7 +96,7 @@
 
 
             <!--Система отображения для дикнтанта предлогов-->
-            <Grid d:Visibility="Visible" 
+            <Grid d:Visibility="Collapsed" 
                   VerticalAlignment="Stretch" 
                   HorizontalAlignment="Center"
                   Visibility="{Binding IsVerbPrepositionDictationSectionVisible, Converter={converters:ReverseCollapseConverter}}">
